h1. CHANGELOG

h2. 2.2.33 February 16, 2013

* fix color for question prompt (https://github.com/RailsApps/rails_apps_composer/issues/161)
* fix inconsistent use of EOF newline (https://github.com/RailsApps/rails_apps_composer/issues/160)

h2. 2.2.32 February 14, 2013

* add gem 'html2haml' version 1.0.0
* update gem 'haml-rails' to 0.4
* update gem 'slim' to 2.0.0.pre.6
* update gem 'bootstrap-sass' to 2.3.0.0
* update gem 'twitter-bootstrap-rails' to 2.2.3
* update gem 'omniauth' to 1.1.3
* update gem 'binding_of_caller' to 0.6.9
* update gem 'better_errors' to 0.6.0
* update gem 'mongoid' to 3.1.0
* update gem 'minitest-spec-rails' to 4.3.8
* update gem 'launchy' to 2.2.0
* update gem 'recurly' to 2.1.8
* update gem 'stripe' to 1.7.10

h2. 2.2.31 January 30, 2013

* fix 'testing' recipe to accommodate change from 'factory_girl_rails' 4.1.0 to 4.2.0
* update gem 'factory_girl_rails' to 4.2.0
* update gem 'devise' to 2.2.3
* update gem 'mongoid-rspec' to 1.6.0
* update gem 'zurb-foundation' to 3.2.5
* update gem 'devise_invitable' to 1.1.5
* update gem 'mongoid' to 3.0.19

h2. 2.2.30 January 20, 2013

* replace 'find_or_create_by_email' with 'create!' in 'db/seeds.rb' when using Mongoid
* update gem 'mongoid' to 3.0.18
* update gem 'capybara' to 2.0.2

h2. 2.2.29 January 20, 2013

* change the password used in examples from 'password' to 'changeme'

h2. 2.2.28 January 20, 2013

* Devise default minimum password length is now eight (Devise 2.2.0)
* fix 'init' recipe for 'application.yml' to accommodate Devise default minimum password length of eight
* fix 'testing' recipe for Fabrication to accommodate longer password default in Devise (contributed by Samson Ootoovak)
* fix 'init' recipe to correct 'seeds.rb' error for Devise Confirmable option (contributed by Rémy Hannequin)
* update gem 'minitest-spec-rails' to 4.3.6
* update gem 'therubyracer' to 0.11.3
* update gem 'devise' to 2.2.2
* update gem 'zurb-foundation' to 3.2.4
* update gem 'mongoid-rspec' to 1.5.6