@@ -4,6 +4,7 @@ h2. 2.2.33 February 16, 2013
 
 * fix color for question prompt (https://github.com/RailsApps/rails_apps_composer/issues/161)
 * fix inconsistent use of EOF newline (https://github.com/RailsApps/rails_apps_composer/issues/160)
+* fix when application.yml is not selected (https://github.com/RailsApps/rails_apps_composer/issues/159)
 
 h2. 2.2.32 February 14, 2013
 
